- Revisited Create Account activity, and added email field
- Created layout for forgot password

- Added some more strings in strings.xml so there's no hardcoded text

- Added functionality for switching between login and forgot password activity (clicking "Forgot Password?" redirects to FP activity)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="security_question">Security Question:</string>
     <string name="name">Name:</string>
     <string name="submit">SUBMIT</string>
+    <string name="forgot_your_password">Forgot Your Password?</string>
 </resources>
