3/18 - Added Landing Page (Beta)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="name">Name:</string>
     <string name="submit">SUBMIT</string>
     <string name="forgot_your_password">Forgot Your Password?</string>
+    <string name="welcome">Welcome</string>
+    <string name="name_view">Your Name</string>
 </resources>
