--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="_4_10">4 / 10</string>
     <string name="welcome">Welcome</string>
     <string name="name_view">Your Name</string>
+    <string name="playlist1">Shower Songs</string>
+    <string name="playlist2">Intrinsic</string>
+    <string name="playlist3">windflowers</string>
+    <string name="playlist4">Morning Commute</string>
+    <string name="playlist5">EDM</string>
 </resources>
