3/27 - Added navigation drawer for spotify.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="playlist4">Morning Commute</string>
     <string name="playlist5">Mellow Morning</string>
     <string name="playlist6">EDM</string>
+    <string name="title_activity_spotify">Our Playlists</string>
 </resources>
