--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="playlist5">Mellow Morning</string>
     <string name="playlist6">EDM</string>
     <string name="title_activity_spotify">Our Playlists</string>
+    <string name="title_activity_contact">Contact Us</string>
 </resources>
