--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,9 @@
     <string name="playlist6">EDM</string>
     <string name="title_activity_spotify">Our Playlists</string>
     <string name="title_activity_contact">Contact Us</string>
+    <string name="int_address">5 Sussex Ave, Newark, NJ 07103</string>
+    <string name="int_phone">(201) 618-2689</string>
+    <string name="int_web">www.intrinsiccafe.com</string>
+    <string name="int_email">intrinsiccafe@gmail.com</string>
+    <string name="title_activity_menu">Our Menu</string>
 </resources>
