--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="log_in_to_your_account">Log In To Your Account</string>
     <string name="phone_number">Phone Number: ##########</string>
     <string name="password">Password:</string>
-    <string name="email">Email:</string>
     <string name="forgot_password"><u>Forgot Password?</u></string>
     <string name="create_your_account">Create Your Account</string>
     <string name="birthdate_mm_dd_yyyy">Birthdate: MM/DD/YYYY</string>
@@ -49,4 +48,7 @@
     <string name="title_activity_smoothie">Smoothie/Slushies</string>
     <string name="title_activity_menu_milkshake">Milkshakes</string>
     <string name="title_activity_menu_coffee">Coffee/Other Drinks</string>
+    <string name="save">Save</string>
+    <string name="email">Email:</string>
+    <string name="my_account">My Account</string>
 </resources>
