--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="save">Save</string>
     <string name="email">Email:</string>
     <string name="my_account">My Account</string>
+    <string name="edit">Edit</string>
 </resources>
