--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="log_in_to_your_account">Log In To Your Account</string>
     <string name="phone_number">Phone Number: ##########</string>
     <string name="password">Password:</string>
+    <string name="confirmPassword">Re-Type Password:</string>
     <string name="forgot_password"><u>Forgot Password?</u></string>
     <string name="create_your_account">Create Your Account</string>
     <string name="birthdate_mm_dd_yyyy">Birthdate: MM/DD/YYYY</string>
